fixed overflow

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -421,6 +421,7 @@ main {
     }
 
     .what-we-do {
+        overflow: hidden;
         .bg-test {
             width: 100%;
             height: 100vh;
@@ -436,14 +437,15 @@ main {
         .bg-dark {
             position: absolute;
             width: 100%;
-            height: 120%;
+            height: 100%;
             background-color: black !important;
             opacity: 0.3;
         }
 
         // margin: 4rem 0;
         color: white;
-        border-radius: 0 0 100px 100px;
+        background-color: red;
+        // border-radius: 0 0 100px 100px;
         width: 100vw;
         height: 100vh;
         position: relative;
@@ -1011,77 +1013,82 @@ main {
 // }
 
 
-.core {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    height: 70vh;
+.core-sec {
+    color: white;
+    text-align: justify;
+    text-align-last: center;
     background-color: $core;
-
-    div {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: auto auto;
-    }
-
-    .layer-1{
-        z-index: 3;
-        width: 17rem;
-        height: 17rem;
-        background-color: $sec3;
-        border-radius: 500px;
-    }
-
-    .layer-2{
-        z-index: 2;
-        width: 20rem;
-        height: 20rem;
-        background-color: $accentDark;
-        border-radius: 500px;
-    }
-
-    .layer-3{
-        z-index: 1;
-        width: 22rem;
-        height: 22rem;
-        background-color: $accent;
-        border-radius: 500px;
-    }
-
-    .glow {
-        width: 5rem;
-        height: 5rem;
-        border-radius: 500px;
-        box-shadow: 0 0 75px 50px rgba($color: $accentDark, $alpha: 0.5);
-        animation: glow 3s ease-in-out infinite;
-
-        @keyframes glow {
-            0% {
-                box-shadow: 0 0 15px 50px rgba($color: $accent, $alpha: 0);
-            }
-
-            50% {
-                box-shadow: 0 0 75px 50px rgba($color: $accent, $alpha: 0.2);
-            }
-
-            100% {
-                box-shadow: 0 0 15px 50px rgba($color: $accent, $alpha: 0);
-            }
-
-        }
-    }
-
-    .core-div {
-        z-index: 99;
-        width: 15rem;
-        height: 15rem;
-    }
-
-    img {
+    .core {
+        overflow: hidden;
+        position: relative;
         width: 100%;
+        height: 50vh;
+
+        div {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+        }
+
+        .layer-1 {
+            z-index: 3;
+            width: 17rem;
+            height: 17rem;
+            background-color: $sec3;
+            border-radius: 500px;
+        }
+
+        .layer-2 {
+            z-index: 2;
+            width: 20rem;
+            height: 20rem;
+            background-color: $accentDark;
+            border-radius: 500px;
+        }
+
+        .layer-3 {
+            z-index: 1;
+            width: 22rem;
+            height: 22rem;
+            background-color: $accent;
+            border-radius: 500px;
+        }
+
+        .glow {
+            width: 5rem;
+            height: 5rem;
+            border-radius: 500px;
+            box-shadow: 0 0 75px 50px rgba($color: $accentDark, $alpha: 0.5);
+            animation: glow 3s ease-in-out infinite;
+
+            @keyframes glow {
+                0% {
+                    box-shadow: 0 0 15px 50px rgba($color: $accent, $alpha: 0);
+                }
+
+                50% {
+                    box-shadow: 0 0 75px 50px rgba($color: $accent, $alpha: 0.2);
+                }
+
+                100% {
+                    box-shadow: 0 0 15px 50px rgba($color: $accent, $alpha: 0);
+                }
+
+            }
+        }
+
+        .core-div {
+            z-index: 99;
+            width: 15rem;
+            height: 15rem;
+        }
+
+        img {
+            width: 100%;
+        }
     }
 }
 
